<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BlueBoothPinterActivity"
    tools:showIn="@layout/activity_blue_booth_pinter">

    <!--这是占位符-->
    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:digits="@+id/text"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </TableRow>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/werks"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/werks"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zlinecode"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zlinecode"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zbc"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zbc"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zkurno"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zkurno"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="25"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:selectAllOnFocus="false"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp" />

                    <TextView
                        android:id="@+id/EName1"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Matnr"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/matnr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.1"
                        android:imeOptions="actionSearch"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/EMaktx"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zgrdate"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zgrdate"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Zproddate"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Zproddate"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/Menge"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <EditText
                        android:id="@+id/Menge"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="2.0"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </EditText>

                    <EditText
                        android:id="@+id/Meins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="21dp"
                        android:layout_marginTop="5dp"
                        android:focusable="false"
                        android:inputType="text"
                        android:textColorHint="@android:color/holo_purple"
                        android:textSize="16sp" />

                    <requestFocus />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:digits="@+id/text"
                        android:text="@string/IZipcode"
                        android:textColor="@android:color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/IZipcode"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:hint="生成托盘编码"
                        android:inputType="text"
                        android:textColor="@android:color/holo_blue_dark"
                        android:textSize="14sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/Charg"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/Zcupno"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1.70"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textSize="16sp">

                        <requestFocus />
                    </TextView>
                </TableRow>

                <!--按钮操作-->
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <Button
                        android:id="@+id/printer"
                        android:layout_width="102dp"
                        android:layout_height="40dp"
                        android:layout_margin="3dip"
                        android:layout_weight="0.30"
                        android:background="@color/colorAccent"
                        android:text="@string/printer" />

                    <Button
                        android:id="@+id/clean"
                        android:layout_width="100dp"
                        android:layout_height="40dp"
                        android:layout_margin="3dip"
                        android:layout_marginRight="10dip"
                        android:layout_weight="0.30"
                        android:background="@color/colorAccent"
                        android:text="@string/clean" />

                    <Button
                        android:id="@+id/exit"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="3dip"
                        android:layout_marginRight="30dp"
                        android:layout_weight="0.30"
                        android:background="@color/colorAccent"
                        android:text="@string/exit" />

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
